--- a/src/content/en/tools/workbox/_index.yaml
+++ b/src/content/en/tools/workbox/_index.yaml
@@ -140,7 +140,7 @@ landing_page:
 
       workbox.routing.registerRoute(
         /^https:\/\/fonts\.googleapis\.com/,
-        workbox.strategies.staleWhileRevalidate({
+        new workbox.strategies.StaleWhileRevalidate({
           cacheName: 'google-fonts-stylesheets',
         }),
       );
@@ -150,7 +150,7 @@ landing_page:
 
       workbox.routing.registerRoute(
         /^https:\/\/fonts\.gstatic\.com/,
-        workbox.strategies.cacheFirst({
+        new workbox.strategies.CacheFirst({
           cacheName: 'google-fonts-webfonts',
           plugins: [
             new workbox.cacheableResponse.Plugin({
@@ -171,7 +171,7 @@ landing_page:
       <pre class="prettyprint lang-javascript">
       workbox.routing.registerRoute(
         /\.(?:js|css)$/,
-        workbox.strategies.staleWhileRevalidate(),
+        new workbox.strategies.StaleWhileRevalidate(),
       );
       </pre>
 
@@ -183,7 +183,7 @@ landing_page:
       <pre class="prettyprint lang-javascript">
       workbox.routing.registerRoute(
         /\.(?:png|gif|jpg|jpeg|svg)$/,
-        workbox.strategies.cacheFirst({
+        new workbox.strategies.CacheFirst({
           cacheName: 'images',
           plugins: [
             new workbox.expiration.Plugin({
