--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1062,8 +1062,10 @@ koto:
   role:
     - author
   email: koto@google.com
+  twitter: kkotowicz
+  github: koto
   description:
-    en: "Software Engineer in a Security Team at Google"
+    en: "Software Engineer in the Information Security Enginnering team at Google"
 
 mustafa:
   name:
