--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1881,7 +1881,7 @@ yoavweiss:
   email:
     yoavweiss@google.com
   description:
-    en: "Working for a faster web platform"
+    en: "Yoav is a Developer Advocate and a WebPerf standards geek"
 
 mikewest:
   name:
