--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1032,7 +1032,7 @@ koto:
   twitter: kkotowicz
   github: koto
   description:
-    en: "Software Engineer in the Information Security Enginnering team at Google"
+    en: "Software Engineer in the Information Security Engineering team at Google"
 
 mustafa:
   name:
