--- a/src/content/en/tools/workbox/guides/_toc.yaml
+++ b/src/content/en/tools/workbox/guides/_toc.yaml
@@ -59,8 +59,8 @@ toc:
     path: /web/tools/workbox/guides/migrations/migrate-from-sw
   - title: "From Workbox v2 to v3"
     path: /web/tools/workbox/guides/migrations/migrate-from-v2
-# - title: "Use as ES2015 Imports"
-#  path: /web/tools/workbox/guides/use-es2015-imports
+  - title: "From Workbox v3 to v4"
+    path: /web/tools/workbox/guides/migrations/migrate-from-v3
 - title: "Service Worker Checklist"
   path: /web/tools/workbox/guides/service-worker-checklist
 - title: "Advanced Recipes"
