Some manual cleanup.

--- a/src/content/en/tools/workbox/_reference-docs.yaml
+++ b/src/content/en/tools/workbox/_reference-docs.yaml
@@ -4,14 +4,12 @@ toc:
   path: /web/tools/workbox/reference-docs/latest/index
 
 - heading: Service Worker Libraries
-- title: "workbox"
-  path: /web/tools/workbox/reference-docs/latest/workbox
 - title: "workbox.core"
   path: /web/tools/workbox/reference-docs/latest/workbox.core
 - title: "workbox.precaching"
   path: /web/tools/workbox/reference-docs/latest/workbox.precaching
 - title: "workbox.routing"
-  path: /web/tools/workbox/reference-docs/latest/workbox.routing
+  path: /web/tools/workbox/reference-docs/latest/workbox.routing.Router
 - title: "workbox.strategies"
   path: /web/tools/workbox/reference-docs/latest/workbox.strategies
 - title: "workbox.expiration"
@@ -26,6 +24,14 @@ toc:
   path: /web/tools/workbox/reference-docs/latest/workbox.broadcastUpdate
 - title: "workbox.rangeRequests"
   path: /web/tools/workbox/reference-docs/latest/workbox.rangeRequests
+- title: "workbox.navigationPreload"
+  path: /web/tools/workbox/reference-docs/latest/workbox.navigationPreload
+- title: "workbox.streams"
+  path: /web/tools/workbox/reference-docs/latest/workbox.streams
+
+- heading: Window Modules
+- title: workbox-window
+  path: /web/tools/workbox/reference-docs/latest/module-workbox-window.Workbox
 
 - heading: Node Modules
 - title: workbox-build
