--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -77,7 +77,7 @@ toc:
   section:
   - title: Reference
     path: /web/tools/chrome-devtools/accessibility/reference
-  - title: Navigating DevTools with assistive technology
+  - title: Navigate DevTools With Assistive Technology
     path: /web/tools/chrome-devtools/accessibility/navigation
   - title: Guides
     section:
