--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -77,6 +77,8 @@ toc:
   section:
   - title: Reference
     path: /web/tools/chrome-devtools/accessibility/reference
+  - title: Navigate DevTools With Assistive Technology
+    path: /web/tools/chrome-devtools/accessibility/navigation
   - title: Guides
     section:
     - title: Track Which Element Has Focus
