[devtools] update the resources guide

--- a/src/content/en/tools/_redirects.yaml
+++ b/src/content/en/tools/_redirects.yaml
@@ -1,5 +1,8 @@
 redirects:
 
+- from: /web/tools/chrome-devtools/manage-data/page-resources
+  to:   /web/tools/chrome-devtools/resources/
+
 - from: /web/tools/chrome-devtools/manage-data/cookies
   to:   /web/tools/chrome-devtools/storage/cookies
 
