--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -186,6 +186,8 @@ toc:
   section:
   - title: Cookies
     path: /web/tools/chrome-devtools/storage/cookies
+  - title: localStorage
+    path: /web/tools/chrome-devtools/storage/localstorage
   - title: Inspect and Manage Storage, Databases, and Caches
     path: /web/tools/chrome-devtools/manage-data/local-storage
 - title: Resources
