[devtools] update web sql guide

--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -192,6 +192,10 @@ toc:
     path: /web/tools/chrome-devtools/storage/indexeddb
   - title: Session Storage
     path: /web/tools/chrome-devtools/storage/sessionstorage
+  - title: Application Cache
+    path: /web/tools/chrome-devtools/storage/applicationcache
+  - title: Web SQL
+    path: /web/tools/chrome-devtools/storage/websql
   - title: Inspect and Manage Storage, Databases, and Caches
     path: /web/tools/chrome-devtools/manage-data/local-storage
 - title: Resources
