--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -198,6 +198,7 @@ toc:
     path: /web/tools/chrome-devtools/storage/websql
   - title: Inspect and Manage Storage, Databases, and Caches
     path: /web/tools/chrome-devtools/manage-data/local-storage
+    status: deprecated
 - title: Resources
   path: /web/tools/chrome-devtools/resources/
 - title: Extend DevTools
