Add redirect for v4.2.0 to latest

--- a/src/content/en/tools/workbox/reference-docs/_redirects.yaml
+++ b/src/content/en/tools/workbox/reference-docs/_redirects.yaml
@@ -38,3 +38,6 @@ redirects:
 
 - from: /web/tools/workbox/reference-docs/v4.0.0/...
   to: /web/tools/workbox/reference-docs/v4.2.0/...
+
+- from: /web/tools/workbox/reference-docs/v4.2.0/...
+  to: /web/tools/workbox/reference-docs/latest/...
