--- a/src/content/en/tools/workbox/reference-docs/_redirects.yaml
+++ b/src/content/en/tools/workbox/reference-docs/_redirects.yaml
@@ -37,7 +37,7 @@ redirects:
   to: /web/tools/workbox/reference-docs/v3.6.1/...
 
 - from: /web/tools/workbox/reference-docs/v4.0.0/...
-  to: /web/tools/workbox/reference-docs/v4.2.0/...
+  to: /web/tools/workbox/reference-docs/latest/...
 
 - from: /web/tools/workbox/reference-docs/v4.2.0/...
   to: /web/tools/workbox/reference-docs/latest/...
