[Translate ENG-KO] updates/2016/05/Houdini.md (#6963)
* Create the korean version of Houdini

* Translate the compositor worklet section

* Update the references

* Update the CSS Paint API section

* Update the layout worklet section

* Add the Typed CSSOM Section

* Update CSS custom properties part

+ also, fix the unnatural expression.

* Update the end of the article

* Add font metrics part

* Add myself as a contributor

* Modify the contributor info in alphabetical order

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -816,6 +816,20 @@ katiehempenius:
   twitter: katiehempenius
   email: khempenius@google.com
 
+jihyerish:
+  name:
+    given: Jihye
+    family: Hong
+  org:
+    name: LG Electronics
+  country: KR
+  role:
+    - translator
+  twitter: jihyerish
+  email: jh.hong@lge.com
+  description:
+    en: "Software Engineer at LG Electronics working on the web standards"
+
 patrickhulce:
   name:
     given: Patrick
