--- a/src/content/en/site-kit/_project.yaml
+++ b/src/content/en/site-kit/_project.yaml
@@ -8,6 +8,7 @@ content_license: cc3-apache2
 footer_path: /web/site-kit/_footer.yaml
 icon:
   path: https://www.gstatic.com/images/branding/product/1x/googleg_64dp.png
+hide_ratings_widget: true
 google_analytics_ids:
   - UA-52746336-1
   - UA-130569087-4
