--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -3,24 +3,6 @@ toc:
   path: /web/tools/chrome-devtools/
 - title: Open DevTools
   path: /web/tools/chrome-devtools/open
-- title: DevTools for Beginners
-  section:
-  - title: HTML and the DOM
-    path: /web/tools/chrome-devtools/beginners/html
-  - title: CSS
-    path: /web/tools/chrome-devtools/beginners/css
-- title: DOM
-  section:
-  - title: Get Started
-    path: /web/tools/chrome-devtools/dom/
-  - title: Deprecated
-    section:
-    - title: DOM Guide
-      path: /web/tools/chrome-devtools/inspect-styles/
-      status: deprecated
-    - title: Edit the DOM
-      path: /web/tools/chrome-devtools/inspect-styles/edit-dom
-      status: deprecated
 - title: CSS
   section:
   - title: Get Started with Viewing and Changing CSS
@@ -36,6 +18,106 @@ toc:
     section:
     - title: Force DevTools Into Print Preview Mode
       path: /web/tools/chrome-devtools/css/print-preview
+- title: Console
+  section:
+  - title: Overview
+    path: /web/tools/chrome-devtools/console/
+  - title: Log Messages
+    path: /web/tools/chrome-devtools/console/log
+  - title: Run JavaScript
+    path: /web/tools/chrome-devtools/console/javascript
+  - title: Reference
+    path: /web/tools/chrome-devtools/console/reference
+  - title: API Reference
+    path: /web/tools/chrome-devtools/console/api
+  - title: Utilities API Reference
+    path: /web/tools/chrome-devtools/console/utilities
+  - title: Live Expressions
+    path: /web/tools/chrome-devtools/console/live-expressions
+  - title: Deprecated
+    section:
+    - title: Diagnose and Log to the Console
+      path: /web/tools/chrome-devtools/console/console-write
+      status: deprecated
+    - title: Compare Similar Data Objects
+      path: /web/tools/chrome-devtools/console/structured-data
+      status: deprecated
+    - title: Measure and Count Executions
+      path: /web/tools/chrome-devtools/console/track-executions
+      status: deprecated
+    - title: Handle Exceptions and Errors
+      path: /web/tools/chrome-devtools/console/track-exceptions
+      status: deprecated
+    - title: Evaluate Expressions
+      path: /web/tools/chrome-devtools/console/expressions
+      status: deprecated
+    - title: Monitor Events
+      path: /web/tools/chrome-devtools/console/events
+      status: deprecated
+- title: Network
+  section:
+  - title: Get Started
+    path: /web/tools/chrome-devtools/network/
+  - title: Network Issues Guide
+    path: /web/tools/chrome-devtools/network/issues
+  - title: Reference
+    path: /web/tools/chrome-devtools/network/reference
+  - title: Resource Loading
+    path: /web/tools/chrome-devtools/network/resource-loading
+    status: deprecated
+- title: Storage
+  section:
+  - title: Cookies
+    path: /web/tools/chrome-devtools/storage/cookies
+  - title: Local Storage
+    path: /web/tools/chrome-devtools/storage/localstorage
+  - title: IndexedDB
+    path: /web/tools/chrome-devtools/storage/indexeddb
+  - title: Session Storage
+    path: /web/tools/chrome-devtools/storage/sessionstorage
+  - title: Application Cache
+    path: /web/tools/chrome-devtools/storage/applicationcache
+  - title: Web SQL
+    path: /web/tools/chrome-devtools/storage/websql
+  - title: Inspect and Manage Storage, Databases, and Caches
+    path: /web/tools/chrome-devtools/manage-data/local-storage
+    status: deprecated
+- title: Command Menu
+  path: /web/tools/chrome-devtools/command-menu/
+- title: Mobile Simulation
+  section:
+  - title: Overview
+    path: /web/tools/chrome-devtools/device-mode/
+  - title: Emulate and Test Other Browsers
+    path: /web/tools/chrome-devtools/device-mode/testing-other-browsers
+  - title: Guides
+    section:
+    - title: Override The User Agent String
+      path: /web/tools/chrome-devtools/device-mode/override-user-agent
+    - title: Override Geolocation
+      path: /web/tools/chrome-devtools/device-mode/geolocation
+    - title: Simulate Device Orientation
+      path: /web/tools/chrome-devtools/device-mode/orientation
+  - title: Deprecated
+    section:
+    - title: Test Responsive and Device-Specific Viewports
+      path: /web/tools/chrome-devtools/device-mode/emulate-mobile-viewports
+      status: deprecated
+    - title: Emulate Geolocation and Accelerometer Sensors
+      path: /web/tools/chrome-devtools/device-mode/device-input-and-sensors
+      status: deprecated
+- title: DOM
+  section:
+  - title: Get Started
+    path: /web/tools/chrome-devtools/dom/
+  - title: Deprecated
+    section:
+    - title: DOM Guide
+      path: /web/tools/chrome-devtools/inspect-styles/
+      status: deprecated
+    - title: Edit the DOM
+      path: /web/tools/chrome-devtools/inspect-styles/edit-dom
+      status: deprecated
 - title: JavaScript
   section:
   - title: Get Started
@@ -65,76 +147,6 @@ toc:
     - title: Watch Variables in Sources
       path: /web/tools/chrome-devtools/javascript/watch-variables
       status: deprecated
-- title: UI References and Overviews
-  section:
-  - title: UI Reference
-    path: /web/tools/chrome-devtools/ui
-  - title: Sources Panel Overview
-    path: /web/tools/chrome-devtools/sources
-  - title: Keyboard Shortcuts
-    path: /web/tools/chrome-devtools/shortcuts
-- title: Accessibility
-  section:
-  - title: Reference
-    path: /web/tools/chrome-devtools/accessibility/reference
-  - title: Navigate DevTools With Assistive Technology
-    path: /web/tools/chrome-devtools/accessibility/navigation
-  - title: Guides
-    section:
-    - title: Track Which Element Has Focus
-      path: /web/tools/chrome-devtools/accessibility/focus
-- title: Simulate Mobile Devices
-  section:
-  - title: Overview
-    path: /web/tools/chrome-devtools/device-mode/
-  - title: Emulate and Test Other Browsers
-    path: /web/tools/chrome-devtools/device-mode/testing-other-browsers
-  - title: Guides
-    section:
-    - title: Override The User Agent String
-      path: /web/tools/chrome-devtools/device-mode/override-user-agent
-    - title: Override Geolocation
-      path: /web/tools/chrome-devtools/device-mode/geolocation
-    - title: Simulate Device Orientation
-      path: /web/tools/chrome-devtools/device-mode/orientation
-  - title: Deprecated
-    section:
-    - title: Test Responsive and Device-Specific Viewports
-      path: /web/tools/chrome-devtools/device-mode/emulate-mobile-viewports
-      status: deprecated
-    - title: Emulate Geolocation and Accelerometer Sensors
-      path: /web/tools/chrome-devtools/device-mode/device-input-and-sensors
-      status: deprecated
-- title: Remote Debugging
-  section:
-  - title: Get Started
-    path: /web/tools/chrome-devtools/remote-debugging/
-  - title: Access Local Servers
-    path: /web/tools/chrome-devtools/remote-debugging/local-server
-  - title: Remote Debugging WebViews
-    path: /web/tools/chrome-devtools/remote-debugging/webviews
-- title: Console
-  section:
-  - title: Overview
-    path: /web/tools/chrome-devtools/console/
-  - title: Get Started
-    path: /web/tools/chrome-devtools/console/get-started
-  - title: API Reference
-    path: /web/tools/chrome-devtools/console/api
-  - title: Utilities API Reference
-    path: /web/tools/chrome-devtools/console/utilities
-  - title: Diagnose and Log to the Console
-    path: /web/tools/chrome-devtools/console/console-write
-  - title: Compare Similar Data Objects
-    path: /web/tools/chrome-devtools/console/structured-data
-  - title: Measure and Count Executions
-    path: /web/tools/chrome-devtools/console/track-executions
-  - title: Handle Exceptions and Errors
-    path: /web/tools/chrome-devtools/console/track-exceptions
-  - title: Evaluate Expressions
-    path: /web/tools/chrome-devtools/console/expressions
-  - title: Monitor Events
-    path: /web/tools/chrome-devtools/console/events
 - title: Performance
   section:
   - title: Get Started
@@ -155,17 +167,24 @@ toc:
   - title: Diagnose Forced Synchronous Layouts
     path: /web/tools/chrome-devtools/rendering-tools/forced-synchronous-layouts
     status: deprecated
-- title: Network
+- title: Accessibility
+  section:
+  - title: Reference
+    path: /web/tools/chrome-devtools/accessibility/reference
+  - title: Navigate DevTools With Assistive Technology
+    path: /web/tools/chrome-devtools/accessibility/navigation
+  - title: Guides
+    section:
+    - title: Track Which Element Has Focus
+      path: /web/tools/chrome-devtools/accessibility/focus
+- title: Remote Debugging
   section:
   - title: Get Started
-    path: /web/tools/chrome-devtools/network/
-  - title: Network Issues Guide
-    path: /web/tools/chrome-devtools/network/issues
-  - title: Reference
-    path: /web/tools/chrome-devtools/network/reference
-  - title: Resource Loading
-    path: /web/tools/chrome-devtools/network/resource-loading
-    status: deprecated
+    path: /web/tools/chrome-devtools/remote-debugging/
+  - title: Access Local Servers
+    path: /web/tools/chrome-devtools/remote-debugging/local-server
+  - title: Remote Debugging WebViews
+    path: /web/tools/chrome-devtools/remote-debugging/webviews
 - title: Memory
   section:
   - title: Overview
@@ -182,23 +201,20 @@ toc:
   path: /web/tools/chrome-devtools/progressive-web-apps
 - title: Security
   path: /web/tools/chrome-devtools/security/
-- title: Storage
+- title: DevTools for Beginners
   section:
-  - title: Cookies
-    path: /web/tools/chrome-devtools/storage/cookies
-  - title: Local Storage
-    path: /web/tools/chrome-devtools/storage/localstorage
-  - title: IndexedDB
-    path: /web/tools/chrome-devtools/storage/indexeddb
-  - title: Session Storage
-    path: /web/tools/chrome-devtools/storage/sessionstorage
-  - title: Application Cache
-    path: /web/tools/chrome-devtools/storage/applicationcache
-  - title: Web SQL
-    path: /web/tools/chrome-devtools/storage/websql
-  - title: Inspect and Manage Storage, Databases, and Caches
-    path: /web/tools/chrome-devtools/manage-data/local-storage
-    status: deprecated
+  - title: HTML and the DOM
+    path: /web/tools/chrome-devtools/beginners/html
+  - title: CSS
+    path: /web/tools/chrome-devtools/beginners/css
+- title: UI References and Overviews
+  section:
+  - title: UI Reference
+    path: /web/tools/chrome-devtools/ui
+  - title: Sources Panel Overview
+    path: /web/tools/chrome-devtools/sources
+  - title: Keyboard Shortcuts
+    path: /web/tools/chrome-devtools/shortcuts
 - title: Resources
   path: /web/tools/chrome-devtools/resources/
 - title: Extend DevTools
