Fix Site Kit menu item labels.

--- a/src/content/en/site-kit/_book.yaml
+++ b/src/content/en/site-kit/_book.yaml
@@ -13,11 +13,11 @@ upper_tabs:
       value: upper-site-kit
     lower_tabs:
       other:
-      - name: About Site-Kit
+      - name: About Site Kit
         contents:
-        - title: About Site-Kit
+        - title: About Site Kit
           path: https://sitekit.withgoogle.com/
-      - name: Set-up
+      - name: Setup
         contents:
-        - title: Set-up
+        - title: Setup
           path: /web/site-kit/
