--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "start": "./start-appengine.sh",
     "test": "gulp test",
     "precommit": "gulp update-updated_on",
+    "prepush": "npm test",
     "prestart": "gulp build",
     "postinstall": "tools/update-resources.sh && gulp post-install"
   }
