--- a/src/content/en/tools/lighthouse/_toc.yaml
+++ b/src/content/en/tools/lighthouse/_toc.yaml
@@ -44,6 +44,8 @@ toc:
     path: /web/tools/lighthouse/audits/oversized-images
   - title: Speed Index
     path: /web/tools/lighthouse/audits/speed-index
+  - title: Performance Budgets
+    path: /web/tools/lighthouse/audits/budgets
   - title: Preload key requests
     path: /web/tools/lighthouse/audits/preload
   - title: Reduce Render-Blocking Scripts
