[devtools] refactor the customization docs

--- a/src/content/en/tools/_redirects.yaml
+++ b/src/content/en/tools/_redirects.yaml
@@ -1,5 +1,8 @@
 redirects:
 
+- from: /web/tools/chrome-devtools/ui
+  to:   /web/tools/chrome-devtools/customize/
+
 - from: /web/tools/chrome-devtools/console/get-started
   to:   /web/tools/chrome-devtools/console/
 
