Update some details in Site Kit parameters to better account for new page and fix related issues.

--- a/src/content/en/site-kit/_footer.yaml
+++ b/src/content/en/site-kit/_footer.yaml
@@ -14,6 +14,6 @@ footer:
     icon_name: bug_report
     contents:
     - label: File an Issue
-      path: https://github.com/google/wp-site-kit/issues
+      path: https://github.com/google/site-kit-wp/issues
     - label: View Plugin Source
-      path: https://github.com/google/wp-site-kit
+      path: https://github.com/google/site-kit-wp
