Adds IO videos to pages
Signed-off-by: Pete LePage <pete.lepage@pobox.com>

--- a/src/content/en/progressive-web-apps/_index.yaml
+++ b/src/content/en/progressive-web-apps/_index.yaml
@@ -39,7 +39,7 @@ landing_page:
           This new level of quality allows Progressive Web Apps to earn a
           place on the user's home screen.
         </p>
-      youtube_id: m-sCdS0sQO8
+      youtube_id: 2KhRmFHLuhE
       # image_path: images/pwa-intro.png
 
   # - classname: devsite-landing-row-100
