add missing "the"

--- a/src/content/en/_index.yaml
+++ b/src/content/en/_index.yaml
@@ -50,7 +50,7 @@ landing_page:
         November 11-12 | San Francisco, USA<br><br>
         Chrome Dev Summit is back! Join us for our annual developer conference
         at the Yerba Buena Center for the Arts in San Francisco, CA on November
-        11-12, 2019. Over two days, you’ll learn about the latest tools and
+        11-12, 2019. Over the two days, you’ll learn about the latest tools and
         updates coming to the web platform and hear directly from the Chrome
         product engineering teams. Sign up for updates on the
         <a href="https://developer.chrome.com/devsummit/">Chrome Dev Summit 2019 website.</a>
