--- a/src/content/en/progressive-web-apps/_book.yaml
+++ b/src/content/en/progressive-web-apps/_book.yaml
@@ -12,7 +12,9 @@ upper_tabs:
         contents:
         - title: Overview
           path: /web/progressive-web-apps/
-        - title: Desktop PWAs
+        - title: Patterns for Promoting PWA Installation (mobile)
+          path: /web/progressive-web-apps/promoting-install-mobile
+        - title: PWAs on Desktop
           path: /web/progressive-web-apps/desktop
         - title: Progressive Web App Checklist
           path: /web/progressive-web-apps/checklist
