Add blog post about web components v0 deprecations.

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2035,3 +2035,12 @@ skikuchi:
     - translator
   github: s-kic
   twitter: s_kic
+
+jbingham:
+  name:
+    given: Jonathan
+    family: Bingham
+  github: jonathanbingham
+  twitter: jbingham
+  description:
+    en: Jonathan is a Product Manager at Google
