--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -199,8 +199,8 @@ jbingham:
   name:
     given: Jonathan
     family: Bingham
-  github: jonathanbingham
-  twitter: jbingham
+  github: jbingham
+  twitter: jonathanbingham
   description:
     en: Jonathan is a Product Manager at Google
 
