--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -195,6 +195,15 @@ ericbidelman:
   description:
     en: 'Engineer @ Google working on web tooling: Headless Chrome, Puppeteer, Lighthouse'
 
+jbingham:
+  name:
+    given: Jonathan
+    family: Bingham
+  github: jbingham
+  twitter: jonathanbingham
+  description:
+    en: Jonathan is a Product Manager at Google
+
 bokan:
   name:
     given: David
@@ -966,6 +975,18 @@ brendankenny:
   email: bckenny@google.com
   description:
     en: Lighthouse Bulb Installer
+
+skikuchi:
+  name:
+    given: Satoko
+    family: Kikuchi
+  org:
+    name: Graat
+  country: JP
+  role:
+    - translator
+  github: s-kic
+  twitter: s_kic
 
 jeokrang:
   name:
@@ -2024,14 +2045,5 @@ maciejzasada:
     - author
   email: maciej@unit9.com
 
-skikuchi:
-  name:
-    given: Satoko
-    family: Kikuchi
-  org:
-    name: Graat
-  country: JP
-  role:
-    - translator
-  github: s-kic
-  twitter: s_kic
+
+
