[devtools] add coverage guide

--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -9,6 +9,8 @@ toc:
     path: /web/tools/chrome-devtools/css/
   - title: CSS Reference
     path: /web/tools/chrome-devtools/css/reference
+  - title: Find Unused CSS
+    path: /web/tools/chrome-devtools/coverage/
   - title: Inspect Animations
     path: /web/tools/chrome-devtools/inspect-styles/animations
   - title: Edit Styles
@@ -124,6 +126,8 @@ toc:
     path: /web/tools/chrome-devtools/javascript/
   - title: Pause Your Code With Breakpoints
     path: /web/tools/chrome-devtools/javascript/breakpoints
+  - title: Find Unused JavaScript
+    path: /web/tools/chrome-devtools/coverage/
   - title: Map Preprocessed Code to Source Code
     path: /web/tools/chrome-devtools/javascript/source-maps
   - title: JS Debugging Reference
